--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,15 @@ dependencies = [
     "typer[all]>=0.9.0",
     "rich>=13.0.0",
     "pyyaml>=6.0",
-    "httpx>=0.25.0",
+    "httpx[http2]>=0.25.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "datasets>=2.14.0",
-    "beautifulsoup4>=4.12.0",
     "lxml>=5.0.0",
+    "selectolax>=0.4.0",
+    "playwright>=1.40.0",
+    "playwright-stealth>=2.0.0",
+    "duckduckgo-search>=8.0.0",
 ]
 
 [project.optional-dependencies]
